Fixed problem with collapsing

--- a/style.css
+++ b/style.css
@@ -124,4 +124,5 @@
   width: 100%;
   box-shadow: 0px 10px 10px #888, 0px -10px 10px #888;
   padding: 2rem;
+  min-height: 10%;
 }
